<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2016  Alexander Samtsov
  ~
  ~     This file is part of New Calories Counter.
  ~
  ~     New Calories Counter is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     New Calories Counter is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with New Calories Counter.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosephisicalactivity_add_button"
        android:layout_gravity="center_horizontal"
        android:id="@+id/choosephisical_add_button"
        android:minHeight="0dp"
        android:minWidth="0dp"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:padding="10dp"
        android:text="@string/choose_activity_label" android:textSize="20sp" />

    <EditText android:id="@+id/choosephisical_myFilter" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:ems="10"
        android:hint="@string/some_hint">
        <requestFocus />
    </EditText>

    <ListView android:id="@+id/choosephisical_listView1" android:layout_width="fill_parent"
        android:layout_height="fill_parent" />


</LinearLayout>
