<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2016  Alexander Samtsov
  ~
  ~     This file is part of New Calories Counter.
  ~
  ~     New Calories Counter is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     New Calories Counter is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with New Calories Counter.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.alexandersamtsov.newcaloriescounter.PhisicalActivityInformation">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/phisical_information_activity_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/phisical_information_activity_desc"
        android:layout_below="@+id/phisical_information_activity_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phisinfo_choose_time_label"
        android:id="@+id/phisical_information_choose_amount"
        android:layout_marginTop="220dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"/>

    <Spinner

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phisical_information_spinner"
        android:layout_toRightOf="@id/phisical_information_choose_amount"
        android:layout_toEndOf="@id/phisical_information_choose_amount"
        android:layout_marginTop="224.4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productinfoactivity_add_button"
        android:id="@+id/phisinfo_button_add_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productinfoactivity_remove_button"
        android:id="@+id/phisinfo_remove_from_base"
        android:layout_marginTop="400dp"
        android:minHeight="0dp"
        android:minWidth="0dp"/>


</RelativeLayout>
